# Sharur

./: .gitignore  CITATIONS.md  CLAUDE.md  DATA_ORGANIZATION.md  INSTALL.md  LICENSE  QUICKSTART.md  QUICK_REFERENCE.md  README.md  REPORT.md  environment.yml  pyproject.toml
.claude/: settings.json
.claude/hooks/: check-python.sh
.claude/skills/: _validation_protocols.md  characterize.md  compare.md  defense.md  explore.md  literature.md  metabolism.md  pathway.md  query.md  survey.md
bennu/: __init__.py  cli.py  lm_factory.py
bennu/agent/: orchestrator.py  router.py  signatures.py
bennu/core/: __init__.py  exceptions.py  hypothesis_registry.py  models.py  provenance_renderer.py  session.py  types.py
bennu/operators/: __init__.py  base.py  export.py  foldseek.py  introspection.py  manifest.py  navigation.py  search.py  similarity.py  structure.py  validation.py  visualization.py
bennu/predicates/: __init__.py  defaults.py  evaluator.py  generator.py  registry.py  topology.py  vocabulary.py
bennu/predicates/mappings/: __init__.py  cazy_map.py  kegg_map.py
bennu/reports/: __init__.py  template.py
bennu/storage/: __init__.py  duckdb_store.py  migrations.py  schema.py  vector_store.py
bennu/tools/: __init__.py  compare_across.py  detect_loci.py  export.py  find_anomalies.py  find_proteins.py  find_similar.py  get_context.py  manage_sets.py  registry.py
scripts/: classify_crispr_cas.py  classify_hydrogenases.py  explore_agent.py  foldseek_batch.py  generate_exploration_report.py  generate_paper_report.py  generate_survey_report.py  generate_viral_genome_report.py  genome_browser_agent.py  ingest.py  ingest_protein_fasta.py  load_additional_annotations.py  migrate_to_manifest.py  pathway_completeness.py  plot_locus_multisource.py  plot_metabolic_ecotypes.py  run_astra_batches.sh  visualize_embeddings.py
sharur/: __init__.py  cli.py
sharur/core/: exceptions.py  hypothesis_registry.py  models.py  provenance_renderer.py  session.py  types.py
sharur/operators/: __init__.py  base.py  export.py  foldseek.py  introspection.py  manifest.py  navigation.py  search.py  similarity.py  structure.py  validation.py  visualization.py
sharur/predicates/: __init__.py  defaults.py  evaluator.py  generator.py  registry.py  topology.py
sharur/predicates/mappings/: __init__.py  pfam_map.py  vog_map.py
sharur/reports/: __init__.py  template.py
sharur/storage/: __init__.py  duckdb_store.py  migrations.py  schema.py
src/ingest/: 00_prepare_inputs.py  01_run_quast.py  02_dfast_qc.py  03_prodigal.py  04_astra_scan.py  06_esm2_embeddings.py  07_build_knowledge_base.py  README.md  dbcan_cazyme.py  gecco_bgc.py  minced_crispr.py
tests/: test_agent_params.py  test_cli_ask.py  test_crispr_ingest.py  test_duckdb_integration.py  test_export.py  test_facade_provenance.py  test_ingest_cli.py  test_ingest_embeddings.py  test_ingest_integration_dataset.py  test_ingest_resources.py  test_ingest_smoke.py  test_provenance_system.py  test_schema_migration.py  test_session.py  test_toolchain_on_ingest_dataset.py  test_vector_store_auto.py  test_vector_store_find_similar.py
tests/test_operators/: __init__.py  conftest.py  test_bennu_facade.py  test_introspection.py  test_navigation.py  test_predicate_generator.py  test_predicates.py  test_search.py  test_sharur_facade.py
tests/test_tools/: test_smoke.py
